--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Home -->
         <section id="home">
             <div class="home-content">
-                <h1 class="animate__animated animate__bounce" id="username">I'm Angle <span id="lname">Maria</span></h1>
+                <h1 class="animate__animated animate__bounce" id="username">I'm Angle <span id="lname">Maria John</span></h1>
                 <p id="user-details">This is my official portfolio website to describe all <br>
                     Details and work experience in Web Development
                 </p>
